// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The level Matches the current snapshot 1`] = `
<styled.li
  isCurrent={false}
  isSelected={false}
  onClick={[Function]}
  onDoubleClick={[Function]}
>
  <Component
    tiles={
      Array [
        Object {
          "position": 0,
          "selectedTileId": 2,
        },
        Object {
          "position": 1,
          "selectedTileId": 3,
        },
        Object {
          "position": 2,
          "selectedTileId": 0,
        },
      ]
    }
  />
  <styled.p>
    Test level 1
  </styled.p>
</styled.li>
`;

exports[`The level Matches the current snapshot if current 1`] = `
<styled.li
  isCurrent={true}
  isSelected={false}
  onClick={[Function]}
  onDoubleClick={[Function]}
>
  <Component
    tiles={
      Array [
        Object {
          "position": 0,
          "selectedTileId": 2,
        },
        Object {
          "position": 1,
          "selectedTileId": 3,
        },
        Object {
          "position": 2,
          "selectedTileId": 0,
        },
      ]
    }
  />
  <styled.p>
    Test level 1
  </styled.p>
</styled.li>
`;

exports[`The level Matches the current snapshot if renaming 1`] = `
<styled.li
  isCurrent={false}
  isSelected={false}
  onClick={[Function]}
  onDoubleClick={[Function]}
>
  <Component
    tiles={
      Array [
        Object {
          "position": 0,
          "selectedTileId": 2,
        },
        Object {
          "position": 1,
          "selectedTileId": 3,
        },
        Object {
          "position": 2,
          "selectedTileId": 0,
        },
      ]
    }
  />
  <styled.input
    innerRef={[Function]}
    onChange={[Function]}
    value="New level name"
  />
</styled.li>
`;

exports[`The level Matches the current snapshot if selected 1`] = `
<styled.li
  isCurrent={false}
  isSelected={true}
  onClick={[Function]}
  onDoubleClick={[Function]}
>
  <Component
    tiles={
      Array [
        Object {
          "position": 0,
          "selectedTileId": 2,
        },
        Object {
          "position": 1,
          "selectedTileId": 3,
        },
        Object {
          "position": 2,
          "selectedTileId": 0,
        },
      ]
    }
  />
  <styled.p>
    Test level 1
  </styled.p>
</styled.li>
`;
